--- a/src/components/loadingTodos/LoadingTodos.css
+++ b/src/components/loadingTodos/LoadingTodos.css
@@ -1,22 +1,37 @@
-.TodoItem {
-    background-color: #FAFAFA;
+.TodoLoading {
+    animation: gradient 2s ease infinite;
+    background: linear-gradient(-45deg, #FAFAFA, #e6e6e6, #FAFAFA, #e6e6e6);
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-size: 400% 400%;
     margin-top: 24px;
     box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.15);
     border-radius: 15px;
   }
+
+
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
   
-  .TodoItem-p {
+  .TodoLoading-p {
     margin: 24px 0 24px 24px;
     width: calc(100% - 120px);
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
   }
-  .TodoItem-p--complete {
+  .TodoLoading-p--complete {
     text-decoration: line-through;
   }
   
