--- a/src/components/TodoSearch/TodoSearch.css
+++ b/src/components/TodoSearch/TodoSearch.css
@@ -1,7 +1,8 @@
 .TodoSearch{
-    background: #ece2e2;
-    border-radius: 2px;
-    height: 64px;
+    background: #ffffff;
+    border-radius: 2rem;
+    height: 4.5rem;
+    border-style: none;
     width: 80%;
     margin: 0 10%;
     font-size: 24px;
