--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  background: #F2F4F5;
+  background: linear-gradient(300deg,deepskyblue,#1ea2eb);
+  background-size: 120% 120%;
+  animation: gradient-animation 18s ease infinite;
   color: #1E1E1F;
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
+
 
 #root {
   margin: 0 24px;
